--- a/tinker/src/main/res/values/colors.xml
+++ b/tinker/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="tip1_color">#ff0000</color>
+    <color name="tip1_color_green">#00ff00</color>
+    <color name="tip1_color_blue">#0000ff</color>
 </resources>
